# ocpi

./: .gitignore  .prospector.yaml  LICENSE  README.md  README.rst  makefile  pyproject.toml
.github/workflows/: push.yaml  pypi.yaml
docs/: README.md  _sidebar.md  index.html
docs/about/: index.md
docs/quick_start/: index.md
docs/tutorials/: adapter.md  crud.md  index.md  push.md
docs/tutorials/modules/: cdrs.md  commands.md  credentials.md  index.md  locations.md  sessions.md  tariffs.md  tokens.md
examples/: v_2_2_1.py
ocpi/: __init__.py  adapter.py  cli.py  crud.py  endpoints.py  main.py
ocpi/adapter/: v_2_2_1.py
ocpi/adaptor/: v_2_2_1.py
ocpi/cdrs/api/: __init__.py  v1.py
ocpi/commands/api/: __init__.py  v1.py
ocpi/core/: config.py  data_types.py  enums.py  schemas.py  status.py
ocpi/core/v_2_2_1/: data_types.py  schemas.py
ocpi/credentials/api/: __init__.py  v1.py
ocpi/locations/v_2_2_1/: enums.py  schemas.py
ocpi/sessions/api/: __init__.py  v1.py
ocpi/tariffs/api/: __init__.py  v1.py
ocpi/tokens/api/: v1.py  (+1 more)
ocpi/versions/: enums.py  schemas.py
py_ocpi/: __init__.py  adapter.py  crud.py  endpoints.py  filters.py  main.py
py_ocpi/cdrs/: schemas.py
py_ocpi/core/: adapter.py  config.py  crud.py  data_types.py  dependencies.py  endpoints.py  enums.py  exceptions.py  push.py  schemas.py  status.py  utils.py
py_ocpi/routers/: __init__.py
py_ocpi/sessions/: enums.py  schemas.py
py_ocpi/versions/: enums.py  schemas.py
tests/: test_dependency_injection.py  test_main.py  test_pagination.py  test_push.py
tests/test_modules/: test_cdrs.py  test_commands.py  test_credentials.py  test_locations.py  test_sessions.py  test_tariffs.py  test_tokens.py  test_versions.py
(+65 files in other folders)
