[tool.poetry]
name = "py_ocpi"
version = "0.2.0"
description = "Python Implementation of OCPI"
authors = ["HAkhavan71 <hakh.27@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/TECHS-Technological-Solutions/ocpi"
license = "MIT"
include = [
    "LICENSE",
]
keywords = ["ocpi"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
requests = "^2.7"
pytest-cov = "^2.10.1"
prospector = "^1.7.7"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
